--- a/ezyzip/app/src/main/AndroidManifest.xml
+++ b/ezyzip/app/src/main/AndroidManifest.xml
@@ -2,9 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name=".RoomImplementation"
@@ -13,16 +23,39 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DevProject"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
+        <activity
+            android:name=".AddfavoriteCity"
+            android:exported="false" />
+
+        <!--
+         <activity
+             android:name=".DetailsActivity"
+             android:exported="false" />
+         <activity
+             android:name=".PlaybackActivity"
+             android:exported="false" />
+         <activity
+             android:name=".BrowseErrorActivity"
+             android:exported="false" />
+        -->
+        <activity
+            android:name=".WeatherDetailsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_weather_details"
+            android:theme="@style/Theme.DevProject" />
         <activity
             android:name=".Welcome"
             android:exported="false" />
         <activity
             android:name=".Connexion"
+            android:exported="false" />
+        <activity
+            android:name=".FavoriteCities"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
